myteo/test/analyze/type_check/tuple/anonymous_construction.myte
module test

// Type checks correctly
val g1: (int, string) = (1, "str");
val g2: (int, (bool, string), unit) = (1, (true, "str"), ());

// Incorrect arity
val g3: (int, string, bool) = (1, "str");
val g4: (int, string, bool) = (1, "str", true, ());

// Incorrect types
val g5: (int, string) = ("str", 1);
val g6: (int, string, int) = (1, 2, 3);
val g7: (int, (int, string), bool) = (1, (2, 3), true);
val g8: (int, int) = "str";

fun main() {}